--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ Created by pixpalette.com - online design magazine -->
                                     role="tab" data-toggle="tab">Portofolio</a></li>
                             <li role="presentation"><a href="#career" aria-controls="career" role="tab"
                                     data-toggle="tab">Perjalanan Karir</a></li>
+                            <li role="presentation"><a href="#education" aria-controls="education" role="tab"
+                                    data-toggle="tab">Pendidikan</a></li>
                             <li role="presentation"><a href="#termCondition" aria-controls="termCondition" role="tab"
                                     data-toggle="tab">Tentangku</a></li>
                             <li role="presentation"><a href="https://bundet.com/" target="_blank">Blog</a></li>
@@ -424,6 +426,129 @@ Created by pixpalette.com - online design magazine -->
                                             <div class="timeline-footer">
                                                 <div class="text-center">
                                                     <normal class="text-muted">Beto Game</normal>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!--
+                            EDUCATION
+                            -->
+                            <div role="tabpanel" class="tab-pane fade" id="education">
+                                <h3 class="page-title text-center">Timeline</h3>
+                                <ul class="timeline">
+                                    <li class="timeline-line"></li>
+                                    <li class="timeline-group">
+                                        <a href="#" class="btn btn-primary"><i class="fa fa-calendar"></i>
+                                            Today</a>
+                                    </li>
+                                </ul>
+                                <ul class="timeline">
+                                    <li class="timeline-line"></li>
+                                    <!-- SMKN 2 Yogyakarta -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Siswa
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    2006 - 2009
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Grade: Negeri</p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>Hanya lulusan sekolah menengah kejuruan. Setiap hari adalah hari
+                                                    belajar.</p>
+                                                <p> Kegiatan dan perkumpulan: TONTI. Itu singkatan dari Pleton Inti, Ini
+                                                    adalah kegiatan pengorganisasian perintah-perintah latihan (seperti
+                                                    gerak berbaris, gerak memutar, memberi hormat) yang mungkin kurang
+                                                    menarik di sekolah saya. Bukan keinginan saya untuk bergabung
+                                                    disana, tapi saya profesional :D</p>
+                                                <p>Saya telah mempelajari dasar pemrograman mikrokontroler dan pemecahan
+                                                    masalah elektronik konsumen</p>
+                                                <div class="timeline-embed">
+                                                    <iframe src="documents/smk-ijazah.pdf" width="100%" height="320"
+                                                        frameborder="0" style="border:0" allowfullscreen></iframe>
+                                                </div>
+                                                <br>
+                                                <p>Sertifikat PKL</p>
+                                                <div class="timeline-embed">
+                                                    <iframe src="documents/smk-certificate-qumicon.pdf" width="100%"
+                                                        height="320" frameborder="0" style="border:0"
+                                                        allowfullscreen></iframe>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">SMKN 2 Yogyakarta</normal>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <!-- SMP Mataram Kasihan -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Siswa
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    2003 - 2006
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Grade: Swasta</p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p> Hanya lulusan sekolah menengah pertama. Setiap hari adalah hari
+                                                    belajar.
+                                                </p>
+                                                <div class="timeline-embed">
+                                                    <iframe src="documents/smp-ijazah.pdf" width="100%" height="320"
+                                                        frameborder="0" style="border:0" allowfullscreen></iframe>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">SMP Mataram Kasihan</normal>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <ul class="timeline">
+                                    <li class="timeline-line"></li>
+                                    <li class="timeline-group">
+                                        <a href="#" class="btn btn-primary"><i class="fa fa-calendar"></i>
+                                            1997</a>
+                                    </li>
+                                </ul>
+                                <!--SD Tawangsari Yogyakarta-->
+                                <ul class="timeline">
+                                    <li class="timeline-line"></li><!-- /.timeline-line -->
+                                    <li class="timeline-item block">
+                                        <div class="timeline-badge"><a rel="tooltip" title="" data-context="inverse"
+                                                data-container="body" class="border-silc" href="#"
+                                                data-original-title="block highlight"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-content">
+                                                <div class="text-center">
+                                                    <p>
+                                                        <a href="#" class="kit-avatar kit-avatar-64">
+                                                            <i class="fa fa-graduation-cap" style="font-size:64px;"></i>
+                                                        </a>
+                                                    </p>
+                                                    <h4>Siswa</h4>
+                                                    <p class="timeline-date"><i class="fa fa-clock-o"></i>1997 - 2003
+                                                    </p>
+                                                    <p>Grade: Negeri</p>
+                                                    <p> Hanya lulusan sekolah dasar. Setiap hari adalah hari bermain.
+                                                    </p>
+                                                    <div class="timeline-embed">
+                                                        <iframe src="documents/sd-ijazah.pdf" width="100%" height="320"
+                                                            frameborder="0" style="border:0" allowfullscreen></iframe>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <div class="text-center">
+                                                    <normal class="text-muted">SD Tawangsari Yogyakarta</normal>
                                                 </div>
                                             </div>
                                         </div>
